--- a/StopDefender/StopDefender.vcxproj.filters
+++ b/StopDefender/StopDefender.vcxproj.filters
@@ -7,5 +7,6 @@
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="ntdll.h" />
   </ItemGroup>
 </Project>
