Code comments, added more defender services

--- a/StopDefender/StopDefender.vcxproj.filters
+++ b/StopDefender/StopDefender.vcxproj.filters
@@ -3,10 +3,12 @@
   <ItemGroup>
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="StopDefender.cpp" />
+    <ClCompile Include="util.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="ntdll.h" />
+    <ClInclude Include="util.h" />
   </ItemGroup>
 </Project>
